--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
 <script src="assets/layouts/layout2/scripts/demo.min.js" type="text/javascript"></script>
 <script src="assets/layouts/global/scripts/quick-sidebar.min.js" type="text/javascript"></script>
 <script src="assets/layouts/global/scripts/quick-nav.min.js" type="text/javascript"></script>
-<!--END JAVASCRIPTS -->
+<script src="assets/global/plugins/amcharts/amcharts/amcharts.js" type="text/javascript"></script>
+<script src="assets/global/plugins/amcharts/amcharts/radar.js" type="text/javascript"></script>
 </body>
 <!-- END BODY -->
 
