--- a/index.html
+++ b/index.html
@@ -51,17 +51,6 @@
 <!-- END THEME STYLES -->
 <link rel="shortcut icon" href="favicon.ico"/>
 </head>
-<!-- END HEAD -->
-<!-- BEGIN BODY -->
-<!-- DOC: Apply "page-header-fixed-mobile" and "page-footer-fixed-mobile" class to body element to force fixed header or footer in mobile devices -->
-<!-- DOC: Apply "page-sidebar-closed" class to the body and "page-sidebar-menu-closed" class to the sidebar menu element to hide the sidebar by default -->
-<!-- DOC: Apply "page-sidebar-hide" class to the body to make the sidebar completely hidden on toggle -->
-<!-- DOC: Apply "page-sidebar-closed-hide-logo" class to the body element to make the logo hidden on sidebar toggle -->
-<!-- DOC: Apply "page-sidebar-hide" class to body element to completely hide the sidebar on sidebar toggle -->
-<!-- DOC: Apply "page-sidebar-fixed" class to have fixed sidebar -->
-<!-- DOC: Apply "page-footer-fixed" class to the body element to have fixed footer -->
-<!-- DOC: Apply "page-sidebar-reversed" class to put the sidebar on the right side -->
-<!-- DOC: Apply "page-full-width" class to the body element to have full width page without the sidebar menu -->
 
 <body ng-controller="AppController"
       class="page-boxed page-header-fixed page-sidebar-closed-hide-logo page-container-bg-solid page-sidebar-closed-hide-logo page-on-load"
@@ -133,6 +122,8 @@
 <script src="assets/global/plugins/angularjs/plugins/ocLazyLoad.min.js" type="text/javascript"></script>
 <script src="assets/global/plugins/angularjs/plugins/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
 <!-- END CORE ANGULARJS PLUGINS -->
+
+
 <!-- BEGIN APP LEVEL ANGULARJS SCRIPTS -->
 <script src="js/main.js" type="text/javascript"></script>
 <script src="js/directives.js" type="text/javascript"></script>
@@ -162,12 +153,16 @@
 <script src="assets/global/plugins/flot/jquery.flot.crosshair.min.js" type="text/javascript"></script>
 <script src="assets/global/plugins/flot/jquery.flot.axislabels.js" type="text/javascript"></script>
 <script src="assets/global/scripts/app.min.js" type="text/javascript"></script>
+
+<!--<script src="assets/pages/scripts/dashboard.js"></script>-->
+
 <script src="assets/layouts/layout2/scripts/layout.min.js" type="text/javascript"></script>
 <script src="assets/layouts/layout2/scripts/demo.min.js" type="text/javascript"></script>
 <script src="assets/layouts/global/scripts/quick-sidebar.min.js" type="text/javascript"></script>
 <script src="assets/layouts/global/scripts/quick-nav.min.js" type="text/javascript"></script>
 <script src="assets/global/plugins/amcharts/amcharts/amcharts.js" type="text/javascript"></script>
 <script src="assets/global/plugins/amcharts/amcharts/radar.js" type="text/javascript"></script>
+<script src="http://192.168.1.30:3000/socket.io/socket.io.js"></script>
 </body>
 <!-- END BODY -->
 
