--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 <script src="assets/global/plugins/flot/jquery.flot.axislabels.js" type="text/javascript"></script>
 <script src="assets/global/scripts/app.min.js" type="text/javascript"></script>
 
-<!--<script src="assets/pages/scripts/dashboard.js"></script>-->
+<script src="assets/pages/scripts/charts-polarcoordinates.js"></script>
 
 <script src="assets/layouts/layout2/scripts/layout.min.js" type="text/javascript"></script>
 <script src="assets/layouts/layout2/scripts/demo.min.js" type="text/javascript"></script>
