--- a/tpl/sidebar.html
+++ b/tpl/sidebar.html
@@ -1,11 +1,5 @@
 <div class="page-sidebar navbar-collapse collapse">
-    <!-- BEGIN SIDEBAR MENU -->
-    <!-- DOC: Apply "page-sidebar-menu-light" class right after "page-sidebar-menu" to enable light sidebar menu style(without borders) -->
-    <!-- DOC: Apply "page-sidebar-menu-hover-submenu" class right after "page-sidebar-menu" to enable hoverable(hover vs accordion) sub menu mode -->
-    <!-- DOC: Apply "page-sidebar-menu-closed" class right after "page-sidebar-menu" to collapse("page-sidebar-closed" class must be applied to the body element) the sidebar sub menu mode -->
-    <!-- DOC: Set data-auto-scroll="false" to disable the sidebar from auto scrolling/focusing -->
-    <!-- DOC: Set data-keep-expand="true" to keep the submenues expanded -->
-    <!-- DOC: Set data-auto-speed="200" to adjust the sub menu slide up/down speed -->
+
     <ul class="page-sidebar-menu  page-header-fixed page-sidebar-menu-hover-submenu " data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
         <li class="nav-item start active open">
             <a href="javascript:;" class="nav-link nav-toggle">
@@ -31,29 +25,29 @@
             </a>
             <ul class="sub-menu">
                 <li class="nav-item  ">
-                    <a href="charts_amcharts.html" class="nav-link ">
+                    <a href="#" class="nav-link ">
                         <span class="title">amChart</span>
                     </a>
                 </li>
                 <li class="nav-item  ">
-                    <a href="charts_flowchart.html" class="nav-link ">
+                    <a href="#" class="nav-link ">
                         <span class="title">Flow Charts</span>
                     </a>
                 </li>
                 <li class="nav-item  ">
-                    <a href="charts_google.html" class="nav-link ">
+                    <a href="#" class="nav-link ">
                         <span class="title">Google Charts</span>
                     </a>
                 </li>
                 <li class="nav-item  ">
-                    <a href="charts_echarts.html" class="nav-link ">
+                    <a href="#" class="nav-link ">
                         <span class="title">eCharts</span>
                     </a>
                 </li>
+                <a href="#" class="nav-link ">
+                    <span class="title">Morris Charts</span>
+                </a>
                 <li class="nav-item  ">
-                    <a href="charts_morris.html" class="nav-link ">
-                        <span class="title">Morris Charts</span>
-                    </a>
                 </li>
                 <li class="nav-item  ">
                     <a href="javascript:;" class="nav-link nav-toggle">
@@ -62,19 +56,17 @@
                     </a>
                     <ul class="sub-menu">
                         <li class="nav-item ">
-                            <a href="charts_highcharts.html" class="nav-link "> HighCharts </a>
+                            <a href="#" class="nav-link "> HighCharts </a>
                         </li>
                         <li class="nav-item ">
-                            <a href="charts_highstock.html" class="nav-link "> HighStock </a>
+                            <a href="#" class="nav-link "> HighStock </a>
                         </li>
                         <li class="nav-item ">
-                            <a href="charts_highmaps.html" class="nav-link "> HighMaps </a>
+                            <a href="#" class="nav-link "> HighMaps </a>
                         </li>
                     </ul>
                 </li>
             </ul>
         </li>
     </ul>
-
-    <!-- END SIDEBAR MENU -->
 </div>
