--- a/tpl/header.html
+++ b/tpl/header.html
@@ -1,13 +1,8 @@
 <div class="page-header navbar navbar-fixed-top">
-    <!-- BEGIN HEADER INNER -->
     <div class="page-header-inner ">
-        <!-- BEGIN LOGO -->
         <div class="page-logo">
             <a href="javascript:;" style="text-decoration:none;text-align: center"><span style="color:white;font-size: 30px;">GNSS</span></a>
         </div>
-        <!-- END LOGO -->
-        <!-- BEGIN PAGE ACTIONS -->
-        <!-- DOC: Remove "hide" class to enable the page header actions -->
         <div class="page-actions">
             <div class="btn-group">
                 <button type="button" class="btn btn-circle btn-outline red dropdown-toggle" data-toggle="dropdown">
@@ -46,14 +41,10 @@
                 </ul>
             </div>
         </div>
-        <!-- END PAGE ACTIONS -->
-        <!-- BEGIN PAGE TOP -->
+
         <div class="page-top">
-            <!-- BEGIN TOP NAVIGATION MENU -->
             <div class="top-menu">
                 <ul class="nav navbar-nav pull-right">
-                    <!-- BEGIN NOTIFICATION DROPDOWN -->
-                    <!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
                     <li class="dropdown dropdown-user">
                         <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
                             <img alt="" class="img-circle" src="assets/layouts/layout2/img/avatar3_small.jpg" />
@@ -62,41 +53,38 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-default">
                             <li>
-                                <a href="page_user_profile_1.html">
+                                <a href="#">
                                     <i class="icon-user"></i> My Profile </a>
                             </li>
                             <li>
-                                <a href="app_calendar.html">
+                                <a href="#">
                                     <i class="icon-calendar"></i> My Calendar </a>
                             </li>
                             <li>
-                                <a href="app_inbox.html">
+                                <a href="#">
                                     <i class="icon-envelope-open"></i> My Inbox
                                     <span class="badge badge-danger"> 3 </span>
                                 </a>
                             </li>
                             <li>
-                                <a href="app_todo_2.html">
+                                <a href="#">
                                     <i class="icon-rocket"></i> My Tasks
                                     <span class="badge badge-success"> 7 </span>
                                 </a>
                             </li>
                             <li class="divider"> </li>
                             <li>
-                                <a href="page_user_lock_1.html">
+                                <a href="#">
                                     <i class="icon-lock"></i> Lock Screen </a>
                             </li>
                             <li>
-                                <a href="page_user_login_1.html">
+                                <a href="#" ng-click="logout_gnss()">
                                     <i class="icon-key"></i> Log Out </a>
                             </li>
                         </ul>
                     </li>
                 </ul>
             </div>
-            <!-- END TOP NAVIGATION MENU -->
         </div>
-        <!-- END PAGE TOP -->
     </div>
-    <!-- END HEADER INNER -->
 </div>
