--- a/tpl/header.html
+++ b/tpl/header.html
@@ -11,11 +11,11 @@
                 </button>
                 <ul class="dropdown-menu" role="menu">
                     <li>
-                        <a name="beijing" href="javascript:;" ng-click="change_base_station('beijing')">
+                        <a href="javascript:;" ng-click="change_base_station('北京')">
                             <i class="icon-flag"></i> 北京 </a>
                     </li>
                     <li>
-                        <a name="shanghai" href="javascript:;" ng-click="change_base_station('shanghai')">
+                        <a href="javascript:;" ng-click="change_base_station('上海')">
                             <i class="icon-flag"></i> 上海 </a>
                     </li>
                 </ul>
@@ -27,15 +27,15 @@
                 </button>
                 <ul class="dropdown-menu" role="menu">
                     <li>
-                        <a name="BDS" href="javascript:;" ng-click="change_signal_type('BDS')">
+                        <a href="javascript:;" ng-click="change_signal_type('BDS')">
                             <i class="icon-docs"></i> BDS </a>
                     </li>
                     <li>
-                        <a name="GPS" href="javascript:;" ng-click="change_signal_type('GPS')">
+                        <a href="javascript:;" ng-click="change_signal_type('GPS')">
                             <i class="icon-tag"></i> GPS </a>
                     </li>
                     <li>
-                        <a name="GLO" href="javascript:;" ng-click="change_signal_type('GLO')">
+                        <a href="javascript:;" ng-click="change_signal_type('GLO')">
                             <i class="icon-share"></i> GLO </a>
                     </li>
                 </ul>
