--- a/tpl/sidebar.html
+++ b/tpl/sidebar.html
@@ -1,72 +1,17 @@
 <div class="page-sidebar navbar-collapse collapse">
 
     <ul class="page-sidebar-menu  page-header-fixed page-sidebar-menu-hover-submenu " data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
-        <li class="nav-item start active open">
-            <a href="javascript:;" class="nav-link nav-toggle">
+        <li class="nav-item">
+            <a ui-sref="dashboard" class="nav-link nav-toggle">
                 <i class="icon-home"></i>
                 <span class="title">监控面板</span>
-                <span class="selected"></span>
-                <span class="arrow open"></span>
             </a>
-            <ul class="sub-menu">
-                <li class="nav-item  start active open">
-                    <a href="charts_flotcharts.html" class="nav-link ">
-                        <span class="title">Flot Charts</span>
-                        <span class="selected"></span>
-                    </a>
-                </li>
-            </ul>
         </li>
-        <li class="nav-item ">
-            <a href="javascript:;" class="nav-link nav-toggle">
+        <li class="nav-item">
+            <a ui-sref="blank">
                 <i class="icon-bar-chart"></i>
                 <span class="title">数据分析</span>
-                <span class="arrow"></span>
             </a>
-            <ul class="sub-menu">
-                <li class="nav-item  ">
-                    <a href="#" class="nav-link ">
-                        <span class="title">amChart</span>
-                    </a>
-                </li>
-                <li class="nav-item  ">
-                    <a href="#" class="nav-link ">
-                        <span class="title">Flow Charts</span>
-                    </a>
-                </li>
-                <li class="nav-item  ">
-                    <a href="#" class="nav-link ">
-                        <span class="title">Google Charts</span>
-                    </a>
-                </li>
-                <li class="nav-item  ">
-                    <a href="#" class="nav-link ">
-                        <span class="title">eCharts</span>
-                    </a>
-                </li>
-                <a href="#" class="nav-link ">
-                    <span class="title">Morris Charts</span>
-                </a>
-                <li class="nav-item  ">
-                </li>
-                <li class="nav-item  ">
-                    <a href="javascript:;" class="nav-link nav-toggle">
-                        <span class="title">HighCharts</span>
-                        <span class="arrow"></span>
-                    </a>
-                    <ul class="sub-menu">
-                        <li class="nav-item ">
-                            <a href="#" class="nav-link "> HighCharts </a>
-                        </li>
-                        <li class="nav-item ">
-                            <a href="#" class="nav-link "> HighStock </a>
-                        </li>
-                        <li class="nav-item ">
-                            <a href="#" class="nav-link "> HighMaps </a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
         </li>
     </ul>
 </div>
