--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <link href="assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css"/>
 
-    <link href="assets/global/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css" />
-    <link href="assets/global/plugins/select2/css/select2-bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="assets/pages/css/login.min.css" rel="stylesheet" type="text/css" />
-
+    <link href="assets/global/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/global/plugins/select2/css/select2-bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/pages/css/login.min.css" rel="stylesheet" type="text/css"/>
 
 
     <link id="ng_load_plugins_before"/>
@@ -61,21 +60,22 @@
 
 <div data-ng-show="login_hide" ng-cloak class="  login">
     <div class="content">
-        <form class="login-form" action="index.html" method="post">
-            <h3 class="form-title font-green">登 录</h3>
-            <div class="alert alert-danger display-hide">
-                <button class="close" data-close="alert"></button>
-                <span> Enter any username and password. </span>
-            </div>
-            <div class="form-group">
-                <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
-                <input class="form-control form-control-solid placeholder-no-fix" type="text" autocomplete="off" placeholder="Username" name="username" /> </div>
-            <div class="form-group">
-                <input class="form-control form-control-solid placeholder-no-fix" type="password" autocomplete="off" placeholder="Password" name="password" /> </div>
-            <div class="form-actions">
-                <button id="login_btn" type="submit" class="btn green uppercase" ng-click="login_gnss()">登录</button>
-            </div>
-        </form>
+        <h3 class="form-title font-green">登 录</h3>
+
+        <div class="alert alert-danger display-hide">
+            <button class="close" data-close="alert"></button>
+            <span> Enter any username and password. </span>
+        </div>
+        <div class="form-group">
+            <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
+            <input class="form-control form-control-solid placeholder-no-fix" type="text" autocomplete="off"
+                   ng-model="userName" placeholder="Username" name="userName"/></div>
+        <div class="form-group">
+            <input class="form-control form-control-solid placeholder-no-fix" type="password" autocomplete="off"
+                  ng-model="passWord"  placeholder="Password" name="passWord"/></div>
+        <div class="form-actions">
+            <button id="login_btn" type="submit" class="btn green uppercase" ng-click="login_gnss()">登录</button>
+        </div>
     </div>
 </div>
 
@@ -83,8 +83,6 @@
 
 
     <div data-ng-include="'tpl/sidebar.html'" data-ng-controller="SidebarController" class="page-sidebar-wrapper"></div>
-
-
 
 
     <div class="page-content-wrapper">
@@ -105,7 +103,6 @@
 
 </div>
 <div class="quick-nav-overlay"></div>
-
 
 
 <script src="assets/global/plugins/jquery.min.js" type="text/javascript"></script>
