--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 
 <html lang="en" class="ie8 no-js" data-ng-app="MetronicApp">
 <html lang="en" class="ie9 no-js" data-ng-app="MetronicApp">
@@ -110,15 +110,20 @@
         type="text/javascript"></script>
 <script src="assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
 <script src="assets/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
-<script src="assets/global/plugins/js.cookie.min.js" type="text/javascript"></script>
 <script src="assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
 
 <script src="assets/global/plugins/angularjs/angular.min.js" type="text/javascript"></script>
+
+<!--<script src="assets/global/plugins/js.cookie.min.js" type="text/javascript"></script>-->
+<!--<script src="http://code.angularjs.org/1.5.8/angular.min.js"></script>-->
+<script src="http://code.angularjs.org/1.5.8/angular-cookies.min.js"></script>
+
 <script src="assets/global/plugins/angularjs/angular-sanitize.min.js" type="text/javascript"></script>
 <script src="assets/global/plugins/angularjs/angular-touch.min.js" type="text/javascript"></script>
 <script src="assets/global/plugins/angularjs/plugins/angular-ui-router.min.js" type="text/javascript"></script>
 <script src="assets/global/plugins/angularjs/plugins/ocLazyLoad.min.js" type="text/javascript"></script>
 <script src="assets/global/plugins/angularjs/plugins/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
+
 
 <script src="js/main.js" type="text/javascript"></script>
 <script src="js/directives.js" type="text/javascript"></script>
