--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <script src="assets/layouts/global/scripts/quick-nav.min.js" type="text/javascript"></script>
 <script src="assets/global/plugins/amcharts/amcharts/amcharts.js" type="text/javascript"></script>
 <script src="assets/global/plugins/amcharts/amcharts/radar.js" type="text/javascript"></script>
-<!--<script src="http://192.168.1.30:3000/socket.io/socket.io.js"></script>-->
+<script src="http://192.168.1.30:3000/socket.io/socket.io.js"></script>
 </body>
 
 
