--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <div class="clearfix"></div>
 
 
-<div data-ng-show="login_hide" ng-cloak class="  login">
+<div data-ng-show="loginPage" ng-cloak class="login">
     <div class="content">
         <h3 class="form-title font-green">登 录</h3>
 
@@ -79,7 +79,7 @@
     </div>
 </div>
 
-<div data-ng-show="login_show" class="page-container">
+<div data-ng-show="indexPage" class="page-container">
 
 
     <div data-ng-include="'tpl/sidebar.html'" data-ng-controller="SidebarController" class="page-sidebar-wrapper"></div>
