--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </div>
 
 <div data-ng-include="'tpl/header.html'" data-ng-controller="HeaderController"
-     class="page-header navbar navbar-fixed-top" data-ng-show="login_show"></div>
+     class="page-header navbar navbar-fixed-top" data-ng-show="indexPage"></div>
 
 <div class="clearfix"></div>
 
