--- a/tpl/header.html
+++ b/tpl/header.html
@@ -11,11 +11,11 @@
                 </button>
                 <ul class="dropdown-menu" role="menu">
                     <li>
-                        <a href="javascript:;" ng-click="change_base_station('北京')">
+                        <a href="javascript:;" ng-click="changeBaseStation('北京')">
                             <i class="icon-flag"></i> 北京 </a>
                     </li>
                     <li>
-                        <a href="javascript:;" ng-click="change_base_station('上海')">
+                        <a href="javascript:;" ng-click="changeBaseStation('上海')">
                             <i class="icon-flag"></i> 上海 </a>
                     </li>
                 </ul>
@@ -27,15 +27,15 @@
                 </button>
                 <ul class="dropdown-menu" role="menu">
                     <li>
-                        <a href="javascript:;" ng-click="change_signal_type('BDS')">
+                        <a href="javascript:;" ng-click="changeSignalType('BDS')">
                             <i class="icon-docs"></i> BDS </a>
                     </li>
                     <li>
-                        <a href="javascript:;" ng-click="change_signal_type('GPS')">
+                        <a href="javascript:;" ng-click="changeSignalType('GPS')">
                             <i class="icon-tag"></i> GPS </a>
                     </li>
                     <li>
-                        <a href="javascript:;" ng-click="change_signal_type('GLO')">
+                        <a href="javascript:;" ng-click="changeSignalType('GLO')">
                             <i class="icon-share"></i> GLO </a>
                     </li>
                 </ul>
@@ -78,7 +78,7 @@
                                     <i class="icon-lock"></i> Lock Screen </a>
                             </li>
                             <li>
-                                <a href="#" ng-click="logout_gnss()">
+                                <a href="#" ng-click="logoutGnss()">
                                     <i class="icon-key"></i> Log Out </a>
                             </li>
                         </ul>
