--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <input class="form-control form-control-solid placeholder-no-fix" type="password" autocomplete="off"
                   ng-model="passWord"  placeholder="Password" name="passWord"/></div>
         <div class="form-actions">
-            <button id="login_btn" type="submit" class="btn green uppercase" ng-click="login_gnss()">登录</button>
+            <button id="login_btn" type="submit" class="btn green uppercase" ng-click="loginGnss()">登录</button>
         </div>
     </div>
 </div>
@@ -171,6 +171,11 @@
 <script src="assets/global/plugins/amcharts/amcharts/amcharts.js" type="text/javascript"></script>
 <script src="assets/global/plugins/amcharts/amcharts/radar.js" type="text/javascript"></script>
 <script src="http://192.168.1.30:3000/socket.io/socket.io.js"></script>
+
+<script src="js/controllers/HeaderController.js"></script>
+<script src="js/controllers/AppController.js"></script>
+<script src="js/controllers/FooterController.js"></script>
+<script src="js/controllers/SidebarController.js"></script>
 </body>
 
 
